--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <form class="contact-form" data-aos="fade-left" action="https://formsubmit.co/ruhaanim2004@gmail.com" method="POST">
-                <input type="hidden" name="_next" value="https://satisoff.github.io/ProjectBMR/thank-you.html">
+                <input type="hidden" name="_next" value="https://satisoff.github.io/thank-you.html">
                 <input type="hidden" name="_subject" value="New Job Application from BMR Manpower!">
                 <input type="hidden" name="_captcha" value="true">
                 <div class="form-group">
