Enhanced form with additional FormSubmit features and fixed thank you page path

--- a/index.html
+++ b/index.html
@@ -216,8 +216,10 @@
                 </div>
             </div>
             <form class="contact-form" data-aos="fade-left" action="https://formsubmit.co/ruhaanim2005@gmail.com" method="POST" id="contactForm">
-                <input type="hidden" name="_next" value="https://satisoff.github.io/thank-you.html">
+                <input type="hidden" name="_next" value="https://satisoff.github.io/ProjectBMR/thank-you.html">
                 <input type="hidden" name="_subject" value="New Job Application from BMR Manpower!">
+                <input type="hidden" name="_autoresponse" value="Thank you for your application! We will contact you soon.">
+                <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_captcha" value="true">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Your Name" required>
