Updated to FormSubmit's encrypted endpoint for better email delivery

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <p>hr@bmrmanpower.com</p>
                 </div>
             </div>
-            <form class="contact-form" data-aos="fade-left" action="https://formsubmit.co/ruhaanim2005@gmail.com" method="POST" id="contactForm">
+            <form class="contact-form" data-aos="fade-left" action="https://formsubmit.co/el/xotubo" method="POST" id="contactForm">
                 <input type="hidden" name="_next" value="https://satisoff.github.io/ProjectBMR/thank-you.html">
                 <input type="hidden" name="_subject" value="New Job Application from BMR Manpower!">
                 <input type="hidden" name="_autoresponse" value="Thank you for your application! We will contact you soon.">
