--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="./main.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function() {
+            emailjs.init("hm94q7lQHvxx8NEDq");
+        })();
+    </script>
 </head>
 <body>
     <!-- Loading Animation -->
@@ -215,23 +221,18 @@
                     <p>hr@bmrmanpower.com</p>
                 </div>
             </div>
-            <form class="contact-form" data-aos="fade-left" action="https://formsubmit.co/el/xotubo" method="POST" id="contactForm">
-                <input type="hidden" name="_next" value="https://satisoff.github.io/ProjectBMR/thank-you.html">
-                <input type="hidden" name="_subject" value="New Job Application from BMR Manpower!">
-                <input type="hidden" name="_autoresponse" value="Thank you for your application! We will contact you soon.">
-                <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_captcha" value="true">
+            <form class="contact-form" data-aos="fade-left" id="contactForm" onsubmit="return sendMail(event)">
                 <div class="form-group">
-                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="text" name="name" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="form-group">
-                    <input type="email" name="email" placeholder="Your Email" required>
+                    <input type="email" name="email" id="email" placeholder="Your Email" required>
                 </div>
                 <div class="form-group">
-                    <input type="tel" name="phone" placeholder="Your Phone" required>
+                    <input type="tel" name="phone" id="phone" placeholder="Your Phone" required>
                 </div>
                 <div class="form-group">
-                    <select name="job_category" required>
+                    <select name="job_category" id="job_category" required>
                         <option value="">Select Job Category</option>
                         <option value="construction">Construction</option>
                         <option value="hospitality">Hospitality</option>
@@ -240,7 +241,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                 </div>
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
