--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
                 <div class="form-group">
                     <select name="job_category" id="job_category" required>
                         <option value="">Select Job Category</option>
-                        <option value="construction">Construction</option>
-                        <option value="hospitality">Hospitality</option>
-                        <option value="healthcare">Healthcare</option>
-                        <option value="other">Other</option>
+                        <option value="Construction">Construction</option>
+                        <option value="Hospitality">Hospitality</option>
+                        <option value="Healthcare">Healthcare</option>
+                        <option value="Other">Other</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
+                <button type="submit" class="submit-btn submit-btn">Send Message</button>
             </form>
         </div>
     </div>
