Fixed form submission and thank you page redirect

--- a/index.html
+++ b/index.html
@@ -137,144 +137,144 @@
     </section>
 
     <!-- Jobs Section -->
-<section class="jobs" id="jobs">
-    <div class="container">
-        <div class="section-title" data-aos="fade-up">
-            <h2>Latest Job Openings</h2>
-            <p>Explore exciting career opportunities</p>
+    <section class="jobs" id="jobs">
+        <div class="container">
+            <div class="section-title" data-aos="fade-up">
+                <h2>Latest Job Openings</h2>
+                <p>Explore exciting career opportunities</p>
+            </div>
+            <div class="jobs-grid">
+                <div class="job-card" data-aos="fade-up">
+                    <h3>Construction Workers</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Saudi Arabia</p>
+                    <ul>
+                        <li>Mason</li>
+                        <li>Carpenter</li>
+                        <li>Steel Fixer</li>
+                        <li>Plumber</li>
+                        <li>Electrician</li>
+                    </ul>
+                    <a href="#contact" class="apply-btn">Apply Now</a>
+                </div>
+                <div class="job-card" data-aos="fade-up" data-aos-delay="100">
+                    <h3>Hospitality Staff</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> UAE</p>
+                    <ul>
+                        <li>Waiter/Waitress</li>
+                        <li>Room Attendant</li>
+                        <li>Chef</li>
+                        <li>Receptionist</li>
+                        <li>Housekeeping</li>
+                    </ul>
+                    <a href="#contact" class="apply-btn">Apply Now</a>
+                </div>
+                <div class="job-card" data-aos="fade-up" data-aos-delay="200">
+                    <h3>Healthcare Professionals</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Kuwait</p>
+                    <ul>
+                        <li>Nurses</li>
+                        <li>Medical Technicians</li>
+                        <li>Lab Technicians</li>
+                        <li>Pharmacists</li>
+                        <li>Healthcare Assistants</li>
+                    </ul>
+                    <a href="#contact" class="apply-btn">Apply Now</a>
+                </div>
+            </div>
         </div>
-        <div class="jobs-grid">
-            <div class="job-card" data-aos="fade-up">
-                <h3>Construction Workers</h3>
-                <p class="location"><i class="fas fa-map-marker-alt"></i> Saudi Arabia</p>
-                <ul>
-                    <li>Mason</li>
-                    <li>Carpenter</li>
-                    <li>Steel Fixer</li>
-                    <li>Plumber</li>
-                    <li>Electrician</li>
-                </ul>
-                <a href="#contact" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card" data-aos="fade-up" data-aos-delay="100">
-                <h3>Hospitality Staff</h3>
-                <p class="location"><i class="fas fa-map-marker-alt"></i> UAE</p>
-                <ul>
-                    <li>Waiter/Waitress</li>
-                    <li>Room Attendant</li>
-                    <li>Chef</li>
-                    <li>Receptionist</li>
-                    <li>Housekeeping</li>
-                </ul>
-                <a href="#contact" class="apply-btn">Apply Now</a>
-            </div>
-            <div class="job-card" data-aos="fade-up" data-aos-delay="200">
-                <h3>Healthcare Professionals</h3>
-                <p class="location"><i class="fas fa-map-marker-alt"></i> Kuwait</p>
-                <ul>
-                    <li>Nurses</li>
-                    <li>Medical Technicians</li>
-                    <li>Lab Technicians</li>
-                    <li>Pharmacists</li>
-                    <li>Healthcare Assistants</li>
-                </ul>
-                <a href="#contact" class="apply-btn">Apply Now</a>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- Contact Section -->
-<section class="contact" id="contact">
-    <div class="container">
-        <div class="section-title" data-aos="fade-up">
-            <h2>Contact Us</h2>
-            <p>Get in touch with our team</p>
-        </div>
-        <div class="contact-grid">
-            <div class="contact-info" data-aos="fade-right">
-                <div class="info-item">
-                    <i class="fas fa-map-marked-alt"></i>
-                    <h3>Our Offices</h3>
-                    <p>Mumbai Office:</p>
-                    <p>BMR Manpower Solutions Pvt. Ltd.</p>
-                    <p>Shop No. 2, Sai Pooja Building</p>
-                    <p>Near Maxus Mall, Bhayander West</p>
-                    <p>Mumbai - 401101</p>
-                    <br>
-                    <p>Kerala Office:</p>
-                    <p>BMR Manpower Solutions Pvt. Ltd.</p>
-                    <p>Door No. XVII/1099-D1</p>
-                    <p>Eroor P.O, Tripunithura</p>
-                    <p>Ernakulam - 682306</p>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-phone-alt"></i>
-                    <h3>Call Us</h3>
-                    <p>Mumbai: +91 8828147686</p>
-                    <p>Kerala: +91 9072547686</p>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-envelope"></i>
-                    <h3>Email Us</h3>
-                    <p>info@bmrmanpower.com</p>
-                    <p>hr@bmrmanpower.com</p>
-                </div>
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="section-title" data-aos="fade-up">
+                <h2>Contact Us</h2>
+                <p>Get in touch with our team</p>
             </div>
-            <form class="contact-form" data-aos="fade-left" id="contactForm" onsubmit="return sendMail(event)">
-                <div class="form-group">
-                    <input type="text" name="name" id="name" placeholder="Your Name" required>
+            <div class="contact-grid">
+                <div class="contact-info" data-aos="fade-right">
+                    <div class="info-item">
+                        <i class="fas fa-map-marked-alt"></i>
+                        <h3>Our Offices</h3>
+                        <p>Mumbai Office:</p>
+                        <p>BMR Manpower Solutions Pvt. Ltd.</p>
+                        <p>Shop No. 2, Sai Pooja Building</p>
+                        <p>Near Maxus Mall, Bhayander West</p>
+                        <p>Mumbai - 401101</p>
+                        <br>
+                        <p>Kerala Office:</p>
+                        <p>BMR Manpower Solutions Pvt. Ltd.</p>
+                        <p>Door No. XVII/1099-D1</p>
+                        <p>Eroor P.O, Tripunithura</p>
+                        <p>Ernakulam - 682306</p>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-phone-alt"></i>
+                        <h3>Call Us</h3>
+                        <p>Mumbai: +91 8828147686</p>
+                        <p>Kerala: +91 9072547686</p>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-envelope"></i>
+                        <h3>Email Us</h3>
+                        <p>info@bmrmanpower.com</p>
+                        <p>hr@bmrmanpower.com</p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input type="email" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <input type="tel" name="phone" id="phone" placeholder="Your Phone" required>
-                </div>
-                <div class="form-group">
-                    <select name="job_category" id="job_category" required>
-                        <option value="">Select Job Category</option>
-                        <option value="Construction">Construction</option>
-                        <option value="Hospitality">Hospitality</option>
-                        <option value="Healthcare">Healthcare</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <textarea name="message" id="message" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn submit-btn">Send Message</button>
-            </form>
+                <form class="contact-form" data-aos="fade-left" id="contactForm">
+                    <div class="form-group">
+                        <input type="text" name="name" id="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" id="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" name="phone" id="phone" placeholder="Your Phone" required>
+                    </div>
+                    <div class="form-group">
+                        <select name="job_category" id="job_category" required>
+                            <option value="">Select Job Category</option>
+                            <option value="Construction">Construction</option>
+                            <option value="Hospitality">Hospitality</option>
+                            <option value="Healthcare">Healthcare</option>
+                            <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" id="message" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Certifications Section -->
-<section class="certifications">
-    <div class="container">
-        <div class="section-title" data-aos="fade-up">
-            <h2>Our Certifications</h2>
-            <p>Licensed and certified manpower recruitment agency</p>
+    <!-- Certifications Section -->
+    <section class="certifications">
+        <div class="container">
+            <div class="section-title" data-aos="fade-up">
+                <h2>Our Certifications</h2>
+                <p>Licensed and certified manpower recruitment agency</p>
+            </div>
+            <div class="cert-grid">
+                <div class="cert-item" data-aos="fade-up">
+                    <i class="fas fa-certificate"></i>
+                    <h3>Government Approved</h3>
+                    <p>Ministry of External Affairs (MEA) Registered</p>
+                </div>
+                <div class="cert-item" data-aos="fade-up" data-aos-delay="100">
+                    <i class="fas fa-award"></i>
+                    <h3>ISO Certified</h3>
+                    <p>ISO 9001:2015 Certified Company</p>
+                </div>
+                <div class="cert-item" data-aos="fade-up" data-aos-delay="200">
+                    <i class="fas fa-star"></i>
+                    <h3>Licensed Agency</h3>
+                    <p>Licensed Recruitment Agency (RA)</p>
+                </div>
+            </div>
         </div>
-        <div class="cert-grid">
-            <div class="cert-item" data-aos="fade-up">
-                <i class="fas fa-certificate"></i>
-                <h3>Government Approved</h3>
-                <p>Ministry of External Affairs (MEA) Registered</p>
-            </div>
-            <div class="cert-item" data-aos="fade-up" data-aos-delay="100">
-                <i class="fas fa-award"></i>
-                <h3>ISO Certified</h3>
-                <p>ISO 9001:2015 Certified Company</p>
-            </div>
-            <div class="cert-item" data-aos="fade-up" data-aos-delay="200">
-                <i class="fas fa-star"></i>
-                <h3>Licensed Agency</h3>
-                <p>Licensed Recruitment Agency (RA)</p>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Footer -->
     <footer>
